:bug: Prevent target overflow

--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@
     height: 100vh;
     background: radial-gradient(circle at center, #444444, #000000);
     font-family: Helvetica, Arial;
+    overflow: hidden;
 }
 
 .shooter .start
